--- a/TESTIMONIOS.html
+++ b/TESTIMONIOS.html
@@ -23,14 +23,10 @@
     </header>
 
     <div class="division">
-        <div class="grays">
-          <p class="in">en este apartado encontraran los comentarios de alguno de nuestros clientes 
-            satisfechos con nuestro trabajo. 
-          </p>
-        </div>
+       
         
         <div class="titulo">
-            <h1 id="titulo"> Lo que dicen nuestros clientes <h1>
+            <h1 id="titulo"> OPINIONES  <h1>
         </div>
     </div>
 
@@ -47,11 +43,6 @@
             <div class="text2"></div>
             <h3 class="come">ME ENCANTA TU TRABAJO </h3>
             <p class="bi">Alejandro gomez </p>
-        </div>
-        <div class="opi">
-            <div class="text3"></div>
-            <h3 class="come">ERES EL MEJOR TE AGRADESCO MUCHO</h3>
-            <p class="bi"> Roberto fernandez</p>
         </div>
         <div class="opi">
             <div class="text4"></div>
