--- a/CTA.html
+++ b/CTA.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CTA</title>
-    <meta http-equiv="refresh" content="5">
     <link rel="stylesheet" href="los.css">
     <script src="https://kit.fontawesome.com/149be14211.js" crossorigin="anonymous"></script>
     <link rel="icon" href="IMG/ico.ico">
@@ -26,12 +25,13 @@
     <div class="listo">
         <p class="r">¿listo para llevar tu <br>
            marca al siguiente <br>
-            nivel? ContÁctame <br> 
-            para obtener <br>
-            resultados medibles</p>
+            nivel?<br><br> ContÁctame <br> 
+            para alcanzar <br>
+            resultados cuantificables.</p>
     </div>
-
-    <button> <a href="form.html"> <p class="kble"> contÁctame </p> </a> </button>
+    <div class="cen">
+    <button> <span><a href="form.html">  Hablemos  </a></span> </button>
+    </div>
 
     <footer>
       <div class="container">
