--- a/TESTIMONIOS.html
+++ b/TESTIMONIOS.html
@@ -35,7 +35,7 @@
         
         <div class="opi">
             <div class="text1"></div>
-            <h3 class="come"> MUCHAS GRACIAS POR TU TRABAJO </h3>
+            <h3 class="come"> AGRADEZCO TUS SERVICIOS</h3>
             <p class="bi">Mariana perez </p>
 
         </div>
