--- a/TESTIMONIOS.html
+++ b/TESTIMONIOS.html
@@ -52,7 +52,7 @@
 
         <div class="opi">
           <div class="text5"></div>
-          <h3 class="come">TRABAJAR CONTIGO HA SIDO LO MEJOR</h3>
+          <h3 class="come">TRABAJAR CONTIGO FUE LO MEJOR</h3>
           <p class="bi">Maria fuentez</p>
       </div>
        
